added functionality to site

--- a/index.html
+++ b/index.html
@@ -18,27 +18,34 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" >
+          <ul class="navbar-nav" id="navbarNav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./"><i class="fa-solid fa-house"></i> Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
+            </li>
+            <li class="nav-item" >
+              <a class="nav-link " href="./products.html" id = "products"><i class="fa-solid fa-bag-shopping"></i>Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
+              <a class="nav-link " href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./services.html">Services</a>  
+              <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./contact.html"><i class="fa-solid fa-envelope"></i> Contact us</a>
+            <li class="nav-item" id= "contactUs">
+              <a class="nav-link " href="./contact.html" ><i class="fa-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <div class ="container">
+      <header class="mt-5">
+        <h1 id="title"><span>
+        </span></h1>
+      </header>
+      </div>
 
     <main id="main">
       
