--- a/products.html
+++ b/products.html
@@ -21,26 +21,34 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active"  href="./"><i class="fa-solid fa-house"></i> Home</a>
+              <a class="nav-link"  href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./services.html">Services</a>  
+              <a class="nav-link " href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./about.html">About Us</a>
+              <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./contact.html"><i class="fa-solid fa-envelope"></i> Contact us</a>
+              <a class="nav-link " href="./contact.html"><i class="fa-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    <div class ="container">
+      <header class="mt-5">
+        <h1 id="title"><span>
+        </span></h1>
+      </header>
+      </div>
+
     <main id="main">
+      
 
     </main>
    
