--- a/contact.html
+++ b/contact.html
@@ -18,22 +18,22 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" >
+          <ul class="navbar-nav" id="navbarNav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
+              <a class="nav-link " href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
+            </li>
+            <li class="nav-item" >
+              <a class="nav-link " href="./products.html" id = "products"><i class="fa-solid fa-bag-shopping"></i>Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
+              <a class="nav-link "  href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
             </li>
             <li class="nav-item">
               <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="./contact.html" id = "contactUs"><i class="fa-solid fa-envelope"></i> Contact us</a>
+            <li class="nav-item" id= "contactUs">
+              <a class="nav-link active" aria-current="page" href="./contact.html" ><i class="fa-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
@@ -54,6 +54,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
-    <script src="./Scripts/main.js"></script>
+    <script src="./Scripts/contact.js"></script>
   </body>
 </html>
