--- a/products.html
+++ b/products.html
@@ -12,19 +12,19 @@
   </head>
   <body>
     <h1>WEBD 6201 Lab 1</h1>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light" id = "navBar">
       <div class="container-fluid">
         <a class="navbar-brand" href="./"><i class="fa-solid fa-code"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" >
+          <ul class="navbar-nav" id="navbarNav">
             <li class="nav-item">
-              <a class="nav-link"  href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
+              <a class="nav-link " href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
+            <li class="nav-item" >
+              <a class="nav-link active"aria-current="page" href="./products.html" id = "products"><i class="fa-solid fa-bag-shopping"></i>Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
@@ -32,8 +32,8 @@
             <li class="nav-item">
               <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="./contact.html"><i class="fa-solid fa-envelope"></i> Contact us</a>
+            <li class="nav-item" id= "contactUs">
+              <a class="nav-link " href="./contact.html" ><i class="fa-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
