--- a/contact.html
+++ b/contact.html
@@ -48,12 +48,34 @@
       </div>
 
     <main id="main">
+      <div class="row justify-content-lg-center g-3">
+        <form form method="get" id="contactform" name="contactform" onsubmit="return showContactInfo()" class="col-lg-6 col-md-10 col-sm-10">
+          <div class="input-group mb-3">
+            <span class="input-group-text">Name </span>
+            <input type="text" class="form-control" id="fullName" name="fullName" placeholder="e.g. Smorf Dingle">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">Contact Number </span>
+            <input type="text" class="form-control" id="contactNumber" name="contactNumber" placeholder="e.g. 6479896565">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">Email Address </span>
+            <input type="text" class="form-control" id="emailAddress" name="emailAddress" placeholder="e.g. smorfdingle@gmail.com">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">Additional Comments</span>
+            <textarea class="form-control" aria-label="Additional Comments" id = "additionalComments"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary" id="submitButton"><i class="fas fa-envelope"></i> Submit</button>
+        </form>
+      </div>
       
   </main>
     <!--Scripts section-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
+    <script src="./Scripts/app.js"></script>
     <script src="./Scripts/contact.js"></script>
   </body>
 </html>
