fixed issues with services page

--- a/services.html
+++ b/services.html
@@ -18,13 +18,13 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" >
+          <ul class="navbar-nav" id="navbarNav">
             <li class="nav-item">
               <a class="nav-link "  href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link "  href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
+              <a class="nav-link "  id = "products" href="./products.html"><i class="fa-solid fa-bag-shopping"></i> Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
