--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
               <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
             <li class="nav-item" id= "contactUs">
-              <a class="nav-link active" aria-current="page" href="./contact.html" ><i class="fa-solid fa-envelope"></i> Contact us</a>
+              <a class="nav-link active" aria-current="page" href="./contact.html" ><i class="faQ-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
