--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,19 @@
         <div class="collapse navbar-collapse" >
           <ul class="navbar-nav" id="navbarNav">
             <li class="nav-item">
-              <a class="nav-link " href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
+              <a class="nav-link "  href="./index.html"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li class="nav-item" >
               <a class="nav-link " href="./products.html" id = "products"><i class="fa-solid fa-bag-shopping"></i>Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link "  href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
+              <a class="nav-link " href="./services.html"><i class="fa-solid fa-plug"></i>Services</a>  
             </li>
             <li class="nav-item">
               <a class="nav-link " href="./about.html"><i class="fa-solid fa-address-card"></i>About Us</a>
             </li>
             <li class="nav-item" id= "contactUs">
-              <a class="nav-link active" aria-current="page" href="./contact.html" ><i class="faQ-solid fa-envelope"></i> Contact us</a>
+              <a class="nav-link active" aria-current="page" href="./contact.html" ><i class="fa-solid fa-envelope"></i> Contact us</a>
             </li>
           </ul>
         </div>
@@ -75,7 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
-    <script src="./Scripts/app.js"></script>
     <script src="./Scripts/contact.js"></script>
+    <script src="./Scripts/app.js"></script>
   </body>
 </html>
